# cbzcal

./: .cbzcal.example.yml  .gitignore  Cargo.toml  MISSING.md  README.md  cbzcal.example.toml
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  ci.yml
.serena/: project.yml
.serena/memories/: on_task_completion.md  style_and_conventions.md  suggested_commands.md
docs/: 01-research.md  02-architecture.md  03-development-flow.md  04-browser-investigation.md  refactoring_plan.md
fixtures/: sample-calendar.json
src/: app.rs  browser.rs  cli.rs  config.rs  datetime.rs  doctor.rs  executor.rs  lib.rs  main.rs  model.rs  prompt.rs  view.rs
src/backend/: cache.rs  cybozu_html.rs  fixture.rs  id.rs  mod.rs
tests/: cli_fixture.rs
